fix: resolve user schema mismatch and add production hardening configs